# anki-card-skill

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: marketplace.json
anki-expert/: SKILL.md
src/anki_skill/: __init__.py  cli.py  exporters.py  models.py  parser.py
tests/: test_cli.py  test_exporters.py  test_parser.py
