[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-skill"
version = "0.1.0"
description = "Claude Code skill for generating and exporting Anki flashcards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "genanki>=0.13.1",
]

[project.scripts]
anki-export = "anki_skill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
